--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-smaad-reactnative-sdk": "^0.1.15",
+    "rn-webview-sdk": "^0.1.3",
+    "rn-webview-sdk2": "^0.1.44",
+    "smaad-rn-sdk": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
